--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==302
+pypiwin32==223
 pywinpty==1.1.4
 pyzmq==22.3.0
 regex==2021.10.8
