--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
 certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+cycler==0.10.0
+idna==3.3
+joblib==1.1.0
+kiwisolver==1.3.2
+matplotlib==3.4.3
+nltk==3.6.5
+numpy==1.21.3
+oauthlib==3.1.1
+pandas==1.3.4
+Pillow==8.4.0
+pyparsing==3.0.0
+python-dateutil==2.8.2
+pytz==2021.3
+regex==2021.10.23
+requests==2.26.0
+requests-oauthlib==1.3.0
+scipy==1.7.1
+seaborn==0.11.2
+six==1.16.0
+tqdm==4.62.3
+tweepy==4.1.0
+urllib3==1.26.7
 wincertstore==0.2
+wordcloud==1.8.1
